GIT_SILENT: Revert "GIT_SILENT: don't use deprecated cmake variable"
This reverts commit a3cc67b3734a60e6db89be9925cb6c33dca5d4b5.

--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -272,12 +272,12 @@ else(MOBILE)
 endif(MOBILE)
 
 if(NOT APPLE AND NOT WIN32)
-  install (FILES icons/128-apps-marble.png DESTINATION ${KDE_INSTALL_ICONDIR}/hicolor/128x128/apps/ RENAME marble.png)
-  install (FILES icons/64-apps-marble.png DESTINATION ${KDE_INSTALL_ICONDIR}/hicolor/64x64/apps/ RENAME marble.png)
-  install (FILES icons/48-apps-marble.png DESTINATION ${KDE_INSTALL_ICONDIR}/hicolor/48x48/apps/ RENAME marble.png)
-  install (FILES icons/32-apps-marble.png DESTINATION ${KDE_INSTALL_ICONDIR}/hicolor/32x32/apps/ RENAME marble.png)
-  install (FILES icons/22-apps-marble.png DESTINATION ${KDE_INSTALL_ICONDIR}/hicolor/22x22/apps/ RENAME marble.png)
-  install (FILES icons/16-apps-marble.png DESTINATION ${KDE_INSTALL_ICONDIR}/hicolor/16x16/apps/ RENAME marble.png)
+  install (FILES icons/128-apps-marble.png DESTINATION ${ICON_INSTALL_DIR}/hicolor/128x128/apps/ RENAME marble.png)
+  install (FILES icons/64-apps-marble.png DESTINATION ${ICON_INSTALL_DIR}/hicolor/64x64/apps/ RENAME marble.png)
+  install (FILES icons/48-apps-marble.png DESTINATION ${ICON_INSTALL_DIR}/hicolor/48x48/apps/ RENAME marble.png)
+  install (FILES icons/32-apps-marble.png DESTINATION ${ICON_INSTALL_DIR}/hicolor/32x32/apps/ RENAME marble.png)
+  install (FILES icons/22-apps-marble.png DESTINATION ${ICON_INSTALL_DIR}/hicolor/22x22/apps/ RENAME marble.png)
+  install (FILES icons/16-apps-marble.png DESTINATION ${ICON_INSTALL_DIR}/hicolor/16x16/apps/ RENAME marble.png)
 endif(NOT APPLE AND NOT WIN32 )
 
 FILE (GLOB AUDIO_FILES audio/*.ogg)
