--- a/src/lib/marble/CMakeLists.txt
+++ b/src/lib/marble/CMakeLists.txt
@@ -443,7 +443,7 @@ if (NOT (CMAKE_SYSTEM_NAME STREQUAL Android))
 endif()
 
 target_include_directories(marblewidget
-    INTERFACE "$<INSTALL_INTERFACE:${KDE_INSTALL_INCLUDEDIR}>"
+    INTERFACE "$<INSTALL_INTERFACE:${INCLUDE_INSTALL_DIR}>"
 )
 
 # choose the correct target install library path
@@ -454,8 +454,8 @@ elseif(APPLE)
 else()
   install(TARGETS marblewidget
     EXPORT MarbleTargets
-    LIBRARY DESTINATION ${KDE_INSTALL_LIBDIR}
-    ARCHIVE DESTINATION ${KDE_INSTALL_LIBDIR})
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
 endif()
 
 
@@ -636,7 +636,7 @@ install( FILES
 
     declarative/MarbleDeclarativePlugin.h
 
-    DESTINATION ${KDE_INSTALL_INCLUDEDIR}/marble
+    DESTINATION ${INCLUDE_INSTALL_DIR}/marble
 )
 
 
@@ -645,7 +645,7 @@ install( FILES
 include(CMakePackageConfigHelpers)
 
 set(MARBLE_CMAKECONFIGNAME Marble)
-set(MARBLE_INSTALL_CMAKECONFIGDIR ${KDE_INSTALL_LIBDIR}/cmake/${MARBLE_CMAKECONFIGNAME})
+set(MARBLE_INSTALL_CMAKECONFIGDIR ${CMAKE_INSTALL_LIBDIR}/cmake/${MARBLE_CMAKECONFIGNAME})
 
 configure_package_config_file(MarbleConfig.cmake.in
     ${CMAKE_CURRENT_BINARY_DIR}/${MARBLE_CMAKECONFIGNAME}Config.cmake
@@ -684,12 +684,12 @@ install(
 
 get_target_property(PRI_LIB_NAME marblewidget OUTPUT_NAME)
 
-set(PRI_ABS_INCLUDE_INSTALL_DIR "${KDE_INSTALL_INCLUDEDIR}")
+set(PRI_ABS_INCLUDE_INSTALL_DIR "${INCLUDE_INSTALL_DIR}")
 if(NOT IS_ABSOLUTE "${PRI_ABS_INCLUDE_INSTALL_DIR}")
     set(PRI_ABS_INCLUDE_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/${PRI_ABS_INCLUDE_INSTALL_DIR}")
 endif()
 
-set(PRI_ABS_LIB_INSTALL_DIR "${KDE_INSTALL_LIBDIR}")
+set(PRI_ABS_LIB_INSTALL_DIR "${CMAKE_INSTALL_LIBDIR}")
 if(NOT IS_ABSOLUTE "${PRI_ABS_LIB_INSTALL_DIR}")
     set(PRI_ABS_LIB_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/${PRI_ABS_LIB_INSTALL_DIR}")
 endif()
