--- a/src/lib/marble/declarative/CMakeLists.txt
+++ b/src/lib/marble/declarative/CMakeLists.txt
@@ -55,5 +55,5 @@ endif()
 if(WIN32)
   install(TARGETS marbledeclarative RUNTIME DESTINATION bin ARCHIVE DESTINATION lib)
 else()
-  install(TARGETS marbledeclarative LIBRARY DESTINATION ${KDE_INSTALL_LIBDIR})
+  install(TARGETS marbledeclarative LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
 endif()
