--- a/src/apps/marble-qt/CMakeLists.txt
+++ b/src/apps/marble-qt/CMakeLists.txt
@@ -47,9 +47,15 @@ if(STATIC_BUILD AND WIN32)
     target_link_libraries(marble-qt ${QT_PLUGINS_DIR}/imageformats/qsvg.lib)
 endif()
 
-if (NOT APPLE)
+if(WIN32)
+install (TARGETS marble-qt RUNTIME DESTINATION .)
+else(WIN32)
+if (APPLE)
+  # No need for this when installing to a bundle
+else (APPLE)
     install (TARGETS marble-qt RUNTIME DESTINATION bin )
-endif (NOT APPLE)
+endif (APPLE)
+endif(WIN32)
 
 if(APPS_INSTALL_DIR)
   install(PROGRAMS org.kde.marble-qt.desktop DESTINATION ${APPS_INSTALL_DIR})
