--- a/src/lib/marble/CMakeLists.txt
+++ b/src/lib/marble/CMakeLists.txt
@@ -448,7 +448,7 @@ target_include_directories(marblewidget
 
 # choose the correct target install library path
 if(WIN32)
-  install(TARGETS marblewidget EXPORT MarbleTargets RUNTIME DESTINATION bin ARCHIVE DESTINATION lib)
+  install(TARGETS marblewidget EXPORT MarbleTargets RUNTIME DESTINATION . ARCHIVE DESTINATION lib)
 elseif(APPLE)
   install(TARGETS marblewidget LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/Marble.app/Contents/MacOS/lib)
 else()
