--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ src/apps/marble_maps/Marble.keystore
 po
 enpo
 .cmake/
+/.clang-format
+/compile_commands.json
+.clangd
+.cache
+.idea
+/cmake-build*
