Change version compatibility to AnyNewerVersion
SameMajorVersion is intended for semantic versioning, but we're using
calendar versioning now...

--- a/src/lib/marble/CMakeLists.txt
+++ b/src/lib/marble/CMakeLists.txt
@@ -49,7 +49,7 @@ ecm_setup_version(PROJECT
     VARIABLE_PREFIX MARBLE_LIB
     VERSION_HEADER "${CMAKE_CURRENT_BINARY_DIR}/marble_version.h"
     PACKAGE_VERSION_FILE "${CMAKE_CURRENT_BINARY_DIR}/${MARBLE_CMAKECONFIGNAME}ConfigVersion.cmake"
-    COMPATIBILITY SameMajorVersion
+    COMPATIBILITY AnyNewerVersion
     SOVERSION 28
     )
 
