--- a/src/lib/astro/CMakeLists.txt
+++ b/src/lib/astro/CMakeLists.txt
@@ -11,7 +11,7 @@ ecm_setup_version(PROJECT
     VARIABLE_PREFIX ASTRO_LIB
     VERSION_HEADER "${CMAKE_CURRENT_BINARY_DIR}/astro_version.h"
     PACKAGE_VERSION_FILE "${CMAKE_CURRENT_BINARY_DIR}/${ASTRO_CMAKECONFIGNAME}ConfigVersion.cmake"
-    COMPATIBILITY SameMajorVersion
+    COMPATIBILITY AnyNewerVersion
     SOVERSION 1
     )
 
