Create version files without the use of ECM
ECM is not acceptable to marble as a required dependeny, so creating the
*ConfigVersion.cmake and *_version.h files should be done using only standard CMake commands.

--- a/src/lib/astro/CMakeLists.txt
+++ b/src/lib/astro/CMakeLists.txt
@@ -6,14 +6,15 @@ INCLUDE_DIRECTORIES(
 )
 
 set(ASTRO_CMAKECONFIGNAME Astro)
-include(ECMSetupVersion)
-ecm_setup_version(PROJECT
-    VARIABLE_PREFIX ASTRO_LIB
-    VERSION_HEADER "${CMAKE_CURRENT_BINARY_DIR}/astro_version.h"
-    PACKAGE_VERSION_FILE "${CMAKE_CURRENT_BINARY_DIR}/${ASTRO_CMAKECONFIGNAME}ConfigVersion.cmake"
-    COMPATIBILITY AnyNewerVersion
-    SOVERSION 1
-    )
+set(ASTRO_LIB_VERSION ${PROJECT_VERSION})
+set(ASTRO_LIB_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
+set(ASTRO_LIB_VERSION_MINOR ${PROJECT_VERSION_MINOR})
+set(ASTRO_LIB_VERSION_PATCH ${PROJECT_VERSION_PATCH})
+set(ASTRO_LIB_VERSION_SOVERSION 1)
+set(HEADER_PREFIX ASTRO_LIB)
+configure_file("${marble_SOURCE_DIR}/cmake/templates/versionheader.h.in" "${CMAKE_CURRENT_BINARY_DIR}/astro_version.h")
+include(CMakePackageConfigHelpers)
+write_basic_package_version_file("${CMAKE_CURRENT_BINARY_DIR}/${ASTRO_CMAKECONFIGNAME}ConfigVersion.cmake" VERSION "${PROJECT_VERSION}" COMPATIBILITY AnyNewerVersion)
 
 ADD_DEFINITIONS(-O3)
 
