Fix CI errors introduced by 9eb9c7494

--- a/src/lib/astro/CMakeLists.txt
+++ b/src/lib/astro/CMakeLists.txt
@@ -7,10 +7,11 @@ INCLUDE_DIRECTORIES(
 
 set(ASTRO_CMAKECONFIGNAME Astro)
 set(ASTRO_LIB_VERSION ${PROJECT_VERSION})
+set(ASTRO_LIB_VERSION_STRING ${PROJECT_VERSION})
 set(ASTRO_LIB_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
 set(ASTRO_LIB_VERSION_MINOR ${PROJECT_VERSION_MINOR})
 set(ASTRO_LIB_VERSION_PATCH ${PROJECT_VERSION_PATCH})
-set(ASTRO_LIB_VERSION_SOVERSION 1)
+set(ASTRO_LIB_SOVERSION 1)
 set(HEADER_PREFIX ASTRO_LIB)
 configure_file("${marble_SOURCE_DIR}/cmake/templates/versionheader.h.in" "${CMAKE_CURRENT_BINARY_DIR}/astro_version.h")
 include(CMakePackageConfigHelpers)
