--- a/src/lib/marble/CMakeLists.txt
+++ b/src/lib/marble/CMakeLists.txt
@@ -45,10 +45,11 @@ INCLUDE(layers/CMakeLists.txt)
 INCLUDE(osm/CMakeLists.txt)
 
 set(MARBLE_LIB_VERSION ${PROJECT_VERSION})
+set(MARBLE_LIB_VERSION_STRING ${PROJECT_VERSION})
 set(MARBLE_LIB_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
 set(MARBLE_LIB_VERSION_MINOR ${PROJECT_VERSION_MINOR})
 set(MARBLE_LIB_VERSION_PATCH ${PROJECT_VERSION_PATCH})
-set(MARBLE_LIB_VERSION_SOVERSION 28)
+set(MARBLE_LIB_SOVERSION 28)
 set(HEADER_PREFIX MARBLE_LIB)
 configure_file("${marble_SOURCE_DIR}/cmake/templates/versionheader.h.in" "${CMAKE_CURRENT_BINARY_DIR}/marble_version.h")
 include(CMakePackageConfigHelpers)
