Remove *_LIB_VERSION_STRING alias for cmake *_LIB_VERSION variables
ECM only denotes the _VERSION_STRING variable as deprecated, so people
used to other projects will likely be more accustomed to the _VERSION
variable name.

--- a/src/lib/astro/CMakeLists.txt
+++ b/src/lib/astro/CMakeLists.txt
@@ -7,7 +7,6 @@ INCLUDE_DIRECTORIES(
 
 set(ASTRO_CMAKECONFIGNAME Astro)
 set(ASTRO_LIB_VERSION ${PROJECT_VERSION})
-set(ASTRO_LIB_VERSION_STRING ${PROJECT_VERSION})
 set(ASTRO_LIB_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
 set(ASTRO_LIB_VERSION_MINOR ${PROJECT_VERSION_MINOR})
 set(ASTRO_LIB_VERSION_PATCH ${PROJECT_VERSION_PATCH})
@@ -48,7 +47,7 @@ endif(WIN32)
 if (NOT (CMAKE_SYSTEM_NAME STREQUAL Android))
   set_target_properties(astro PROPERTIES
       EXPORT_NAME "Astro"
-      VERSION ${ASTRO_LIB_VERSION_STRING}
+      VERSION ${ASTRO_LIB_VERSION}
       SOVERSION ${ASTRO_LIB_SOVERSION}
   )
 endif()
