--- a/src/lib/marble/CMakeLists.txt
+++ b/src/lib/marble/CMakeLists.txt
@@ -45,7 +45,6 @@ INCLUDE(layers/CMakeLists.txt)
 INCLUDE(osm/CMakeLists.txt)
 
 set(MARBLE_LIB_VERSION ${PROJECT_VERSION})
-set(MARBLE_LIB_VERSION_STRING ${PROJECT_VERSION})
 set(MARBLE_LIB_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
 set(MARBLE_LIB_VERSION_MINOR ${PROJECT_VERSION_MINOR})
 set(MARBLE_LIB_VERSION_PATCH ${PROJECT_VERSION_PATCH})
@@ -444,7 +443,7 @@ set_target_properties(marblewidget  PROPERTIES
 
 if (NOT (CMAKE_SYSTEM_NAME STREQUAL Android))
   set_target_properties(marblewidget  PROPERTIES
-    VERSION ${MARBLE_LIB_VERSION_STRING}
+    VERSION ${MARBLE_LIB_VERSION}
     SOVERSION ${MARBLE_LIB_SOVERSION}
   )
 endif()
@@ -704,7 +703,7 @@ endif()
 file(GENERATE
     OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/qt_Marble.pri
     CONTENT
-"QT.Marble.VERSION = ${MARBLE_LIB_VERSION_STRING}
+"QT.Marble.VERSION = ${MARBLE_LIB_VERSION}
 QT.Marble.MAJOR_VERSION = ${MARBLE_LIB_VERSION_MAJOR}
 QT.Marble.MINOR_VERSION = ${MARBLE_LIB_VERSION_MINOR}
 QT.Marble.PATCH_VERSION = ${MARBLE_LIB_VERSION_PATCH}
