--- a/src/apps/CMakeLists.txt
+++ b/src/apps/CMakeLists.txt
@@ -1,6 +1,6 @@
 option(BUILD_MARBLE_APPS "Build the main Marble applications" ON)
 if(BUILD_MARBLE_APPS)
-    if (NOT CMAKE_SYSTEM_NAME STREQUAL Android)
+    if (NOT ANDROID)
         add_subdirectory(marble-ui)
         add_subdirectory(marble-qt)
         add_subdirectory(marble-kde)
