--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -1,4 +1,4 @@
-if(NOT CMAKE_SYSTEM_NAME STREQUAL Android)
+if(NOT ANDROID)
     add_subdirectory( designer )
     add_subdirectory( templates )
 endif()
