Explicitly define plugin id for thumbnail plugins
Otherwise, the desktop to json conversion interprets them as the same file


(cherry picked from commit ff2ded2d8a943e8e2fabbe05bfb3b53ec69b5ecf)

--- a/src/plugins/runner/gpx/marble_thumbnail_gpx.desktop
+++ b/src/plugins/runner/gpx/marble_thumbnail_gpx.desktop
@@ -39,6 +39,7 @@ Name[zh_CN]=GPX 地理数据
 Name[zh_TW]=GPX 地理資料
 
 X-KDE-ServiceTypes=ThumbCreator
+X-KDE-PluginInfo-Name=marble_thumbnail_gpx
 MimeType=application/gpx+xml;
 
 X-KDE-Library=marblethumbnail
