--- a/src/plugins/runner/osm/marble_thumbnail_osm.desktop
+++ b/src/plugins/runner/osm/marble_thumbnail_osm.desktop
@@ -39,6 +39,7 @@ Name[zh_CN]=OSM 数据
 Name[zh_TW]=OSM 資料
 
 X-KDE-ServiceTypes=ThumbCreator
+X-KDE-PluginInfo-Name=marble_thumbnail_osm
 MimeType=application/x-osm+xml;
 
 X-KDE-Library=marblethumbnail
