--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,3 +5,36 @@ include:
   - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/linux.yml
   - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/freebsd.yml
   - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/windows.yml
+
+# Manual job for building of maps.kde.org binaries
+maps-kde-org-binaries:
+  stage: build
+  image: ubuntu:20.04
+  tags:
+    - Linux
+  when: manual
+  script:
+    - export DEBIAN_FRONTEND=noninteractive
+    - export DEBCONF_NONINTERACTIVE_SEEN=true
+    - apt-get update && apt-get -y install
+        cmake
+        debhelper
+        devscripts
+        g++
+        git
+        libboost-program-options-dev
+        libmapnik-dev
+        libprotobuf-dev
+        libshp-dev
+        protobuf-compiler
+        qtbase5-dev
+    - tools/vectorosm-tilecreator/setup/build/build-tirex.sh
+    - tools/vectorosm-tilecreator/setup/build/build-tilegenerator.sh
+  artifacts:
+    expire_in: 1 week
+    when: on_success
+    paths:
+     - "*.deb"
+     - build/tools/vectorosm-tilecreator/marble-vectorosm-tirex-backend
+     - build/tools/vectorosm-tilecreator/marble-vectorosm-process-land-polygons
+     - build/tools/vectorosm-tilecreator/marble-vectorosm-tilecreator
