Fix link definitions with newer CMake versions
LINK_PUBLIC and LINK_PRIVATE have been deprecated for many years, and
SailfishOS has a newer enough CMake version now. Marble requires CMake
3.10 anyway.

Without this change, cmake 3.24.0 won't find the imported targets when
Marble is used as a library.

--- a/src/apps/marble-ui/CMakeLists.txt
+++ b/src/apps/marble-ui/CMakeLists.txt
@@ -11,21 +11,18 @@ qt_wrap_ui(marble_SRCS ${marble_UI})
 
 add_library (marbleui STATIC ${marble_SRCS})
 
-# TODO: use PUBLIC/PRIVATE everywhere instead of LINK_PUBLIC/LINK_PRIVATE
-# once SailfishOS has cmake >= 2.8.12
-
 target_link_libraries (
     marbleui
-    LINK_PUBLIC
+    PUBLIC
         marblewidget
         Qt5::Widgets
         Qt5::PrintSupport
-    LINK_PRIVATE
+    PRIVATE
         Qt5::Network
 )
 if (NOT MARBLE_NO_DBUS)
     target_link_libraries( marbleui
-        LINK_PRIVATE
+        PRIVATE
             Qt5::DBus
     )
 endif ()
@@ -34,7 +31,7 @@ if(WIN32)
   # TODO: PUBLIC or can be PRIVATE?
   target_link_libraries(
     marbleui
-    LINK_PUBLIC
+    PUBLIC
         ws2_32
         imm32
         winmm
@@ -44,6 +41,6 @@ endif(WIN32)
 ## this works for win32 only because FindQt does not handle this correct
 if(STATIC_BUILD AND WIN32)
     # TODO: PUBLIC or can be PRIVATE?
-    target_link_libraries(marbleui LINK_PUBLIC ${QT_PLUGINS_DIR}/imageformats/qjpeg.lib)
-    target_link_libraries(marbleui LINK_PUBLIC ${QT_PLUGINS_DIR}/imageformats/qsvg.lib)
+    target_link_libraries(marbleui PUBLIC ${QT_PLUGINS_DIR}/imageformats/qjpeg.lib)
+    target_link_libraries(marbleui PUBLIC ${QT_PLUGINS_DIR}/imageformats/qsvg.lib)
 endif()
