Astro is a dependency
With CMake 3.24, the dependency Astro is checked-for when
reading MarbleTargets. Since MarbleConfig did not look
for it, doing `find_package(Marble)` with a CMake-3.24-built
Marble will fail.

Look for the dependency, first.

--- a/src/lib/marble/MarbleConfig.cmake.in
+++ b/src/lib/marble/MarbleConfig.cmake.in
@@ -11,6 +11,7 @@ if (_CMakeFindDependencyMacro_FOUND)
         find_dependency(Qt5WebEngine @REQUIRED_QT_VERSION@)
         find_dependency(Qt5WebEngineWidgets @REQUIRED_QT_VERSION@)
     endif()
+    find_dependency(Astro)
 else()
     find_package(Qt5Xml REQUIRED)
     find_package(Qt5Widgets REQUIRED)
@@ -18,6 +19,7 @@ else()
         find_package(Qt5WebEngine REQUIRED)
         find_package(Qt5WebEngineWidgets REQUIRED)
     endif()
+    find_package(Astro)
 endif()
 
 include("${CMAKE_CURRENT_LIST_DIR}/@MARBLE_CMAKECONFIGNAME@Targets.cmake")
