Update CMakeLists.txt to allow for translations being in tree.
Update CMakeLists.txt to allow for translations being in tree.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -398,6 +398,7 @@ marble_install_po_files_as_qm(poqm)
 # Let releaseme know about this:
 # SKIP_PO_INSTALL
 
+ki18n_install(po)
 
 ####################################################
 # Install extra files
