- Better preview for WMS-based themes. - Turn off the experimental Sentinel map by default. - Allow for 32bit grayscale maps. - MapWizard code cleanup

--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -131,7 +131,7 @@ install (FILES
 maps/earth/hillshading/0/0/0.png
 DESTINATION ${MARBLE_DATA_INSTALL_PATH}/maps/earth/hillshading/0/0)
 
-OPTION(EXPERIMENTAL_SENTINEL2_MAP "Install an experimental satellite map theme" ON)
+OPTION(EXPERIMENTAL_SENTINEL2_MAP "Install an experimental satellite map theme" OFF)
 if(EXPERIMENTAL_SENTINEL2_MAP)
     install (DIRECTORY maps/earth/sentinel2 DESTINATION ${MARBLE_DATA_INSTALL_PATH}/maps/earth)
 endif()
