--- a/src/plugins/runner/kml/CMakeLists.txt
+++ b/src/plugins/runner/kml/CMakeLists.txt
@@ -20,22 +20,22 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${ECM_MODULE_PATH})
 
 include(KDEInstallDirs)
 
-macro_optional_find_package(KF5 ${REQUIRED_KF5_MIN_VERSION} QUIET COMPONENTS KIO)
-if(NOT KF5_FOUND)
+macro_optional_find_package(KF6 ${REQUIRED_KF6_MIN_VERSION} QUIET COMPONENTS KIO)
+if(NOT KF6_FOUND)
     return()
 endif()
 
 # register marble part as handler
 # install again once part is fixed to load and show the passed file
-# install(FILES marble_part_kml.desktop DESTINATION ${KDE_INSTALL_KSERVICES5DIR})
-# install(FILES marble_part_kmz.desktop DESTINATION ${KDE_INSTALL_KSERVICES5DIR})
+# install(FILES marble_part_kml.desktop DESTINATION ${KDE_INSTALL_FULL_KSERVICESDIR})
+# install(FILES marble_part_kmz.desktop DESTINATION ${KDE_INSTALL_FULL_KSERVICESDIR})
 
 # register thumbnail plugin as handler
-install(FILES marble_thumbnail_kml.desktop DESTINATION ${KDE_INSTALL_KSERVICES5DIR})
-install(FILES marble_thumbnail_kmz.desktop DESTINATION ${KDE_INSTALL_KSERVICES5DIR})
+install(FILES marble_thumbnail_kml.desktop DESTINATION ${KDE_INSTALL_FULL_KSERVICESDIR})
+install(FILES marble_thumbnail_kmz.desktop DESTINATION ${KDE_INSTALL_FULL_KSERVICESDIR})
 
 if(NOT WIN32 AND NOT APPLE)
     # register marble app as handler
-    install(FILES marble_kml.desktop DESTINATION ${KDE_INSTALL_APPDIR})
-    install(FILES marble_kmz.desktop DESTINATION ${KDE_INSTALL_APPDIR})
+    install(FILES marble_kml.desktop DESTINATION ${KDE_INSTALL_FULL_APPDIR})
+    install(FILES marble_kmz.desktop DESTINATION ${KDE_INSTALL_FULL_APPDIR})
 endif()
