--- a/src/plugins/runner/CMakeLists.txt
+++ b/src/plugins/runner/CMakeLists.txt
@@ -23,10 +23,10 @@ add_subdirectory( cyclestreets )
 
 #Parsing
 add_subdirectory( cache )
-add_subdirectory( gpx )
-add_subdirectory( json )
-add_subdirectory( kml )
-add_subdirectory( osm )
+#add_subdirectory( gpx )
+#add_subdirectory( json )
+#add_subdirectory( kml )
+#add_subdirectory( osm )
 add_subdirectory( pn2 )
 add_subdirectory( pnt )
 add_subdirectory( log )
